--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "sendotp": "^1.2.9",
     "uuid": "^8.3.0",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
