--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "headth",
   "version": "1.0.0",
-  "description": "a api application for the headth corporatio",
+  "description": "a api application for the headth corporation",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -42,5 +43,9 @@
     "uuid": "^8.3.0",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "mocha": "1.20.1",
+    "supertest": "0.13.0"
   }
 }
