--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "csurf": "^1.11.0",
+    "csv-parser": "^3.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
